[tool.black]
line-length = 100
target-version = ['py38']
exclude = '/(\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|venv|\.svn|_build|buck-out|build|dist|model)/' # Default excludes from black and the generated folder model

[tool.poetry]
name = "goth"
version = "0.15.9"
description = "Golem Test Harness - integration testing framework"
authors = ["Golem Factory <contact@golem.network>"]
license = "GPL-3.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Framework :: AsyncIO",
  "Framework :: Pytest",
  "Topic :: Software Development :: Testing",
]
repository = "https://github.com/golemfactory/goth"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.1"
aiohttp = "^3.8.5"
ansicolors = "^1.1.0"
docker-compose = "^1.29"
docker = "^6.0"
dpath = "^2.0"
func_timeout = "4.3.5"
markupsafe = "2.0.1"
# This piece of software is dodgy as hell.
# There is some weird stuff wrapped over it and the version cannot be bumped without
# breaking the whole thing.
# All calls are proxied to emit events?
# We should get rid of the proxy monitoring layer, because it adds a lot of complexity
# Also it prevents library from working on Windows as I understand
mitmproxy = "^5.3"
pyyaml = "5.3.1"
transitions = "^0.8"
typing_extensions = "^4.5"
urllib3 = "^1.26"
ya-aioclient = "^0.6"
ghapi = "^0.1.16"

[tool.poetry.dev-dependencies]
black = "21.7b0"
flake8 = "^6.1"
flake8-docstrings = "^1.7"
Flake8-pyproject = "^1.2.2"
mypy = "^1.5"
poethepoet = "^0.22"
pytest-asyncio = "0.21"
pytest = "^7.4"

[tool.poe.tasks]
interactive = "python -m goth start goth/default-assets/goth-config.yml"
checks_codestyle = { sequence = [
  "_checks_codestyle_flake8",
  "_checks_codestyle_black",
], help = "Run only code style checks" }
_checks_codestyle_flake8 = "flake8"
_checks_codestyle_black = "black --check --diff ."
checks_typing = { cmd = "mypy --install-types --non-interactive --ignore-missing-imports --check-untyped-defs --warn-unused-ignores --show-error-codes .", help = "Run only code typing checks" }
format = { sequence = ["_format_black"], help = "Run code auto formatting" }
_format_black = "black ."
tests = { sequence = [
  "tests_unit",
  "tests_integration",
], help = "Run all available tests" }
tests_unit = "pytest -W ignore::DeprecationWarning -svx test/unit"
tests_integration = "pytest -W ignore::DeprecationWarning -svx test/integration"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100
extend-ignore = [
  "E203", # See https://github.com/PyCQA/pycodestyle/issues/373
  "E231", # black ignores this rule when formatting
  "D100", # No docs for public module: to be fixed by https://github.com/golemfactory/goth/issues/606
  "D101", # No docs for public class: to be fixed by https://github.com/golemfactory/goth/issues/606
  "D102", # No docs for public method: to be fixed by https://github.com/golemfactory/goth/issues/606
  "D104", # No docs for public package: to be fixed by https://github.com/golemfactory/goth/issues/606
  "D105", # No docs for magic method: to be fixed by https://github.com/golemfactory/goth/issues/606
  "D107", # No docs for __init__: to be fixed by https://github.com/golemfactory/goth/issues/606
  "D202", # We prefer whitelines after docstrings
  "D400", # First line should end with a period: to be fixed by https://github.com/golemfactory/goth/issues/606
  "D403", # First word of the first line should be properly capitalize: to be fixed by https://github.com/golemfactory/goth/issues/606
  "F405", # Star imports: to be fixed by https://github.com/golemfactory/goth/issues/607

]
exclude = [
  ".git",
  "__pycache__",
  "docs/source/conf.py",
  "old",
  "build",
  "dist",
  "model",
  ".venv",
]
