[tool.black]
line-length = 100
target-version = ['py38']
exclude = '/(\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|venv|\.svn|_build|buck-out|build|dist|model)/' # Default excludes from black and the generated folder model

[tool.poetry]
name = "goth"
version = "0.17.0"
description = "Golem Test Harness - integration testing framework"
authors = ["Golem Factory <contact@golem.network>"]
license = "GPL-3.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Framework :: AsyncIO",
  "Framework :: Pytest",
  "Topic :: Software Development :: Testing",
]
repository = "https://github.com/golemfactory/goth"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.1"
aiohttp = "^3.9.5"
ansicolors = "^1.1.8"
docker = "^7.0"
dpath = "^2.1"
func_timeout = "^4.3"
markupsafe = "^2.1"
pylproxy = "=0.2.3"
#pylproxy ={ git = "https://github.com/golemfactory/pylproxy.git", rev = "ed0a98cfc44e9ab35062f2feff60b6523afb485a" }
pyyaml = "^6.0"
transitions = "^0.9.0"
typing_extensions = "^4.5"
ya-tmp-pyapi = "=0.7.0"
ghapi = "^1.0"

[tool.poetry.dev-dependencies]
black = "^22.1"
flake8 = "^7.0"
flake8-docstrings = "^1.7"
flake8-pyproject = "^1.2"
mypy = "^1.9"
poethepoet = "^0.25"
pytest-asyncio = "^0.23.6"
pytest = "^8.1"

[tool.poe.tasks]
interactive = "python -m goth start goth/default-assets/goth-config.yml"
checks_codestyle = { sequence = [
  "_checks_codestyle_flake8",
  "_checks_codestyle_black",
], help = "Run only code style checks" }
_checks_codestyle_flake8 = "flake8"
_checks_codestyle_black = "black --check --diff ."
checks_typing = { cmd = "mypy --install-types --non-interactive --ignore-missing-imports --check-untyped-defs --warn-unused-ignores --show-error-codes .", help = "Run only code typing checks" }
format = { sequence = ["_format_black"], help = "Run code auto formatting" }
_format_black = "black ."
tests = { sequence = [
  "tests_unit",
  "tests_integration",
], help = "Run all available tests" }
tests_unit = "pytest -W ignore::DeprecationWarning -svx test/unit"
tests_integration = "pytest -W ignore::DeprecationWarning -svx test/integration"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100
extend-ignore = [
  "E203", # See https://github.com/PyCQA/pycodestyle/issues/373
  "E231", # black ignores this rule when formatting
  "D100", # No docs for public module: to be fixed by https://github.com/golemfactory/goth/issues/606
  "D101", # No docs for public class: to be fixed by https://github.com/golemfactory/goth/issues/606
  "D102", # No docs for public method: to be fixed by https://github.com/golemfactory/goth/issues/606
  "D104", # No docs for public package: to be fixed by https://github.com/golemfactory/goth/issues/606
  "D105", # No docs for magic method: to be fixed by https://github.com/golemfactory/goth/issues/606
  "D107", # No docs for __init__: to be fixed by https://github.com/golemfactory/goth/issues/606
  "D202", # We prefer whitelines after docstrings
  "D400", # First line should end with a period: to be fixed by https://github.com/golemfactory/goth/issues/606
  "D403", # First word of the first line should be properly capitalize: to be fixed by https://github.com/golemfactory/goth/issues/606
  "F405", # Star imports: to be fixed by https://github.com/golemfactory/goth/issues/607

]
exclude = [
  ".git",
  "__pycache__",
  "docs/source/conf.py",
  "old",
  "build",
  "dist",
  "model",
  ".venv",
]
